--- a/.docker/php/7.2/vhost.conf
+++ b/.docker/php/7.2/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerName dev.accredited-inc.com
+	#ServerName dev.project.com
     DocumentRoot /var/www/html
 
     <Directory "/var/www/html">
